avoiding low contrast text

--- a/site/assets/style.css
+++ b/site/assets/style.css
@@ -347,7 +347,6 @@ main li {
 #home-quote cite {
   display: block;
   font-size: 0.85em;
-  color: #777;
   font-style: normal;
   text-align: right;
 }
